--- a/29-lifecycle2/package.json
+++ b/29-lifecycle2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "29-lifecycle",
+  "name": "29-lifecycle2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,11 +9,11 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
